--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,1 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-
-/.didntUse
-yarn.lock
-package-lock.json
+node_modules
